trying to fix layout problem in iphone

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -84,6 +84,9 @@ button {
   height: 40px;
   background-color: var(---buttons);
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 button:hover {
